--- a/carbonia/ia/Templates/index.html
+++ b/carbonia/ia/Templates/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Subir Factura de Luz</title>
-    <link rel="stylesheet" href="nibcalderonduoc/capstone_ia/carbonia/ia/Templates/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="file-upload">
