--- a/carbonia/ia/Templates/result.html
+++ b/carbonia/ia/Templates/result.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Archivo Subido</title>
-    <link rel="stylesheet" href="/carbonia/ia/Templates/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="file-upload">
