--- a/carbonia/ia/Templates/index.html
+++ b/carbonia/ia/Templates/index.html
@@ -3,8 +3,76 @@
 <head>
     <title>Subir Factura de Luz</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/x-icon" href="https://firebasestorage.googleapis.com/v0/b/unify-v3-copy.appspot.com/o/noflxksrkig-4%3A77?alt=media&token=fde79ac1-99f6-40c9-ad56-22c825ce3670">
 </head>
 <body>
+    <div id="viewport">
+        <!-- Sidebar -->
+        <div id="sidebar">
+          <header>
+            <a href="#">My App</a>
+          </header>
+          <ul class="nav">
+            <li>
+              <a href="#">
+                <i class="zmdi zmdi-view-dashboard"></i> Dashboard
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <i class="zmdi zmdi-link"></i> Shortcuts
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <i class="zmdi zmdi-widgets"></i> Overview
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <i class="zmdi zmdi-calendar"></i> Events
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <i class="zmdi zmdi-info-outline"></i> About
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <i class="zmdi zmdi-settings"></i> Services
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <i class="zmdi zmdi-comment-more"></i> Contact
+              </a>
+            </li>
+          </ul>
+        </div>
+        <!-- Content -->
+        <div id="content">
+          <nav class="navbar navbar-default">
+            <div class="container-fluid">
+              <ul class="nav navbar-nav navbar-right">
+                <li>
+                  <a href="#"><i class="zmdi zmdi-notifications text-danger"></i>
+                  </a>
+                </li>
+                <li><a href="#">Test User</a></li>
+              </ul>
+            </div>
+          </nav>
+          <div class="container-fluid">
+            <h1>Simple Sidebar</h1>
+            <p>
+              Make sure to keep all page content within the 
+              <code>#content</code>.
+            </p>
+          </div>
+        </div>
+      </div>
+      
     <div class="file-upload">
         <div className="logo">
             <img
