--- a/carbonia/ia/Templates/Partials/sidebar.html
+++ b/carbonia/ia/Templates/Partials/sidebar.html
@@ -4,7 +4,7 @@
     </header>
     <ul class="nav">
       <li>
-        <a href="dashboard">
+        <a href="{% url 'dashboard' %}">
           <i class="zmdi zmdi-view-dashboard"></i>
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
           <path d="M64 64c0-17.7-14.3-32-32-32S0 46.3 0 64L0 400c0 44.2 35.8 80 80 80l400 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L80 416c-8.8 0-16-7.2-16-16L64 64zm406.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L320 210.7l-57.4-57.4c-12.5-12.5-32.8-12.5-45.3 0l-112 112c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L240 221.3l57.4 57.4c12.5 12.5 32.8 12.5 45.3 0l128-128z"/></svg>
@@ -20,7 +20,7 @@
         </a>
       </li>
       <li>
-        <a href="result">
+        <a href="{% url 'result' %}">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
           <path d="M160 80c0-26.5 21.5-48 48-48l32 0c26.5 0 48 21.5 48 48l0 352c0 26.5-21.5 48-48 48l-32 0c-26.5 0-48-21.5-48-48l0-352zM0 272c0-26.5 21.5-48 48-48l32 0c26.5 0 48 21.5 48 48l0 160c0 26.5-21.5 48-48 48l-32 0c-26.5 0-48-21.5-48-48L0 272zM368 96l32 0c26.5 0 48 21.5 48 48l0 288c0 26.5-21.5 48-48 48l-32 0c-26.5 0-48-21.5-48-48l0-288c0-26.5 21.5-48 48-48z"/></svg>
           Informes
