--- a/carbonia/ia/Templates/result.html
+++ b/carbonia/ia/Templates/result.html
@@ -1,27 +1,11 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <title>Archivo Subido</title>
-    {% include 'partials/header.html' %}
-</head>
-<body>
-    <div id="viewport">
-        <!-- Sidebar -->        
-        {% include 'partials/sidebar.html' %}
+{% extends 'partials/base.html' %}
 
-        <!-- Content -->
-        <div id="content">
-          <div class="container-fluid">
-            <div class="file-upload">
-              <h1>Resultados del Análisis</h1>
+{% block title %}Dashboard{% endblock %}
+
+{% block content %}
+<h1>Resultados del Análisis</h1>
               <p><strong>URL del archivo subido:</strong> <a href="{{ file_url }}">{{ file_url }}</a></p>
               <h2>Información extraída del archivo:</h2>
               <pre>{{ extracted_info }}</pre>
               <a class="file-upload-btn" href="{% url 'index' %}">Subir otra factura</a>
-          </div>
-          </div>
-        </div>
-      </div>
-    
-</body>
-</html>
+{% endblock %}
