--- a/carbonia/ia/Templates/result.html
+++ b/carbonia/ia/Templates/result.html
@@ -1,11 +1,14 @@
 {% extends 'partials/base.html' %}
 
-{% block title %}Dashboard{% endblock %}
+{% block title %}Analisis de datos{% endblock %}
 
 {% block content %}
-<h1>Resultados del Análisis</h1>
+
+  <h1>Resultados del Análisis</h1>
+  
               <p><strong>URL del archivo subido:</strong> <a href="{{ file_url }}">{{ file_url }}</a></p>
               <h2>Información extraída del archivo:</h2>
               <pre>{{ extracted_info }}</pre>
               <a class="file-upload-btn" href="{% url 'index' %}">Subir otra factura</a>
+
 {% endblock %}
